# panda_path_planning_task

./: README.md
isaac_panda/: moveit_perception_panda.usd  warehouse_moveit_perception.usd
isaac_panda/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
isaac_panda/install/panda_description/share/panda_description/: package.sh
isaac_panda/install/panda_moveit_config/share/panda_moveit_config/: local_setup.sh  package.sh
isaac_panda/install/perception_pipeline/lib/perception_pipeline/: pick_and_place.launch.py  pick_place_with_grasp
isaac_panda/install/perception_pipeline/share/ament_index/resource_index/parent_prefix_path/: perception_pipeline
isaac_panda/install/perception_pipeline/share/perception_pipeline/: local_setup.sh  package.sh
isaac_panda/install/perception_pipeline/share/perception_pipeline/launch/: perception_pipeline_demo.launch.py
isaac_panda/log/: latest_build
isaac_panda/src/perception_pipeline/: CMakeLists.txt  package.xml
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/panda_path_planning/lib/panda_path_planning/: obstacle_publisher  planning_scene_demo
ros2_ws/install/panda_path_planning/share/panda_path_planning/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/panda_path_planning/share/panda_path_planning/launch/: bringup_panda_demo.launch.py  bringup_panda_demo_custom_env.launch.py
ros2_ws/log/: latest_build
ros2_ws/src/panda_path_planning/: setup.cfg  setup.py
